Introduce NVML.{attach,detach}
Signed-off-by: Christian Lindig <christian.lindig@citrix.com>

--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
   (name gpumon_lib)
   (wrapped false)
-  (libraries result stdext nvml_stubs))
+  (libraries result stdext xapi-idl nvml_stubs))
