--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name gpumon_lib)
  (wrapped false)
- (libraries nvml_stubs rresult xapi-stdext-unix))
+ (libraries nvml_stubs rresult xapi-idl xapi-stdext-unix))
